tests/paczka2/big_fuzzy/25724388.err
Error in line 3: ngFZqI4Ep S430 60,2
Error in line 24: 2xJ28VL8q8 S650 2,9
Error in line 41: 2xJ28VL8q8 S650 72,6
Error in line 45: oCXEIw7I S681 76,1
Error in line 44: 2xJ28VL8q8 S681 19,2
Error in line 55: 25RIKUjVaDu S681 99,2
Error in line 57: 25RIKUjVaDu S650 44,0
Error in line 56: 2xJ28VL8q8 S430 92,3
Error in line 61: 25RIKUjVaDu A476 15,6
Error in line 71: 25RIKUjVaDu S650 13,9
Error in line 68: S430 A476 85,2
Error in line 74: S430 S681 45,4
Error in line 78: ngFZqI4Ep S430 30,1
Error in line 87: 25RIKUjVaDu S430 8,5
Error in line 75: oCXEIw7I S650 175,0
Error in line 95: 25RIKUjVaDu S650 42,1
Error in line 106: JsfBheP7BEi S650 5,3
Error in line 105: S430 S650 55,8
Error in line 113: aFug S430 83,3
Error in line 129: aFug S650 32,2
Error in line 135: 25RIKUjVaDu S681 1,2
Error in line 138: oCXEIw7I S650 22,1
Error in line 139: oCXEIw7I S681 71,1
Error in line 130: aFug S681 26,6
Error in line 124: ngFZqI4Ep S650 124,6
Error in line 156: JsfBheP7BEi S681 49,2
Error in line 154: ngFZqI4Ep S681 64,0
Error in line 178: S430 A476 6p,5
Error in line 169: S430 A476 52,5
Error in line 176: oCXEIw7I S681 67,9
Error in line 185: aFug S430 22,7
Error in line 167: JsfBheP7BEi A476 41,7
Error in line 201: 2xJ28VL8q8 A476 107,7
Error in line 207: S430 S430 14,4
Error in line 214: oCXEIw7I S650 50,7
Error in line 229: ngFZqI4Ep S681 86,3
Error in line 230: ngFZqI4Ep S430 74,2
Error in line 237: S430 S650 -3,2
Error in line 223: aFug A476 37,9
Error in line 234: 25RIKUjVaDu A476 5,1
Error in line 212: S430 S650 56,0
Error in line 244: ngFZqI4Ep A476 428,7
